--- a/frontend/src/widgets/CallComponentPage/UI/CallComponentPage.module.scss
+++ b/frontend/src/widgets/CallComponentPage/UI/CallComponentPage.module.scss
@@ -9,6 +9,7 @@
     border-radius: rem(14px);
     padding: rem(10px);
     gap: rem(10px);
+    z-index: 100;
 
     &:hover {
         cursor: grab;
@@ -17,12 +18,17 @@
     .secondaryVideo {
         max-width: rem(240px);
         height: 100%;
+        display: flex;
     }
 
     .secondaryVideoWrapper {
         max-height: rem(140px);
         border-radius: rem(14px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
         overflow: hidden;
+        position: relative;
         border: rem(1px) solid var(--white);
         transition: border 200ms ease-in-out;
     }
@@ -42,10 +48,12 @@
     justify-content: center;
     align-items: center;
     .mainVideoWrapper {
+        display: flex;
         max-height: 80%;
         max-width: 80%;
         width: 100%;
-        overflow-y: hidden;
+        position: relative;
+        overflow: hidden;
         border-radius: rem(14px);
 
         .mainVideo {
