rabbit and redis messages creation, base text chat UI

--- a/frontend/src/app/styles/styles.scss
+++ b/frontend/src/app/styles/styles.scss
@@ -4,6 +4,7 @@
     --white: #fff;
     --black: #03010a;
     --dark-gray: #a1a9bb;
+    --light-gray: #f5f5f5;
 
     --dark-blue: #251f47;
     --light-blue: #89a6fb;
